app-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        # v1 versiyonunu kullan
        image: wil42/playground:v1
        ports:
        - containerPort: 8888 # Uygulama portu
