app-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
  # namespace 'dev' olmalı (Argo CD ayarından geliyor)
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  # Bu satırı ekleyin:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-service
            port:
              number: 8888
